[package]
name = "kanshi-android"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
authors = ["pleme-io"]
repository = "https://github.com/pleme-io/kanshi-android"
homepage = "https://github.com/pleme-io/kanshi-android"
description = "Continuous device attestation daemon for GrapheneOS"

[[bin]]
name = "kanshi-android"
path = "src/main.rs"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
